apps/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.17

          ports:
            - containerPort: 8989

          volumeMounts:
            - name: config
              mountPath: /config

            - name: media
              mountPath: /tv
              subPath: series

            - name: media
              mountPath: /downloads
              subPath: downloads

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config

        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
